--- a/Changelog
+++ b/Changelog
@@ -2,11 +2,11 @@ muninlite
 
 Changelog:
 
-0.9.15 - 
+0.9.15 - 1.0.0
 
-Date:
+Date: 2007-06-20
 
-  - 
+  - First major release (no changes)
 
 0.9.14 - 0.9.15
 
